working on hebrew - adding contact us page + sending email with EmailJS

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/about.html" />
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
 	<!-- carousel CSS -->
@@ -24,12 +24,16 @@
 	<link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
 	<!-- font-awesome CSS -->
 	<link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+	<!-- font-awesome fix CSS -->
+	<link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
 	<!-- font-flaticon CSS -->
 	<link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
 	<!-- theme-default CSS -->
 	<link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
 	<!-- meanmenu CSS -->
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
+	<!-- Fonts CSS -->
+	<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
 	<!-- Main Style CSS -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 	<!-- transitions CSS -->
@@ -173,7 +177,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="#">בלוג</a></li>
+					<li><a href="blog.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
@@ -338,7 +342,7 @@
 						<div class="company-desc-info">
 							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
 							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1 פתח תקווה</p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
