--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/" />
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
 	<!-- carousel CSS -->
@@ -24,13 +24,15 @@
 	<link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
 	<!-- font-awesome CSS -->
 	<link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+	<!-- font-awesome fix CSS -->
+	<link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
 	<!-- font-flaticon CSS -->
 	<link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
 	<!-- theme-default CSS -->
 	<link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
 	<!-- meanmenu CSS -->
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
-	<!-- font css (added) -->
+	<!-- Fonts CSS -->
 	<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
 	<!-- Main Style CSS -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
@@ -45,14 +47,8 @@
 	<!-- bootstrap icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
-	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
-	<style>
-		body {
-			font-family: 'Assistant', sans-serif;
-		}
-	</style>
 	<!-- Schema.org markup for Google -->
 	<script type="application/ld+json">
 	{
@@ -162,7 +158,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="#">בלוג</a></li>
+					<li><a href="blog.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
@@ -278,12 +274,13 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>ייצוג דיירים בהתחדשות עירונית, ליווי עסקאות מכר ושכירות, וטיפול בתמ"א 38. בדיקת
+									חוזים, איתור מכשולים וליווי עד השלמת העסקה, תוך הגנה מקסימלית על זכויותיכם בכל עסקת
+									נדל"ן.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="real-estate.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -302,12 +299,12 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>משרדנו מטפל בחוזים משפטיים, חוזי עבודה, חוזי שכירות, וחוזי מכר. אנו דואגים שכל צד
+									יעמוד בהתחייבויותיו, תוך שמירה על זכויות הלקוח ומניעת סכסוכים משפטיים.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="contracts.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -326,12 +323,13 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>עורכת הדין מעין דקל מקיימת הרצאות מרתקות בנושאים כמו הוצאה לפועל, נדל"ן, פגיעה בנשים
+									וקטינים, ובריונות ברשת. בנוסף, תוכלו לצפות בראיונותיה בתקשורת ובפודקאסטים, ולהתרשם
+									מהידע הרב והמקצועיות שלה.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="blog.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -350,12 +348,13 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>משרדנו מתמחה בטיפול בתביעות לשון הרע, כולל פרסומים פוגעניים במדיה, בעיתונות
+									ובאינטרנט. אנו מייצגים לקוחות פרטיים ועסקיים, ומספקים ייעוץ וליווי משפטי מלא עד
+									להשגת צדק ופיצוי.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="defamation-law.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -374,12 +373,12 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>משרדנו מטפל בנזקי רכוש שנגרמו כתוצאה משריפה, הצפות, גניבה, פריצה או ליקויי בנייה. אנו
+									פועלים בשיתוף פעולה עם מומחים כדי להבטיח פיצוי הולם ללקוחותינו.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="tort_law.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -398,12 +397,12 @@
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>משרדנו מתמחה בליווי לקוחות מול לשכות הוצאה לפועל, כולל פתיחת תיקים, הטלת עיקולים,
+									ומימוש כספים. אנו מספקים ייעוץ משפטי מלא להבטחת זכויות הנושים.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
+								<a href="service.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -777,7 +776,7 @@
 						<div class="company-desc-info">
 							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
 							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> מה הכתובת של המשרד? </p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
@@ -887,6 +886,7 @@
 
 
 	<!-- jquery js -->
+	<!-- jquery js -->
 	<script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
 	<!-- bootstrap js -->
 	<script src="assets/js/bootstrap.min.js"></script>
@@ -918,6 +918,8 @@
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<!-- theme js -->
 	<script src="assets/js/theme.js"></script>
+	<!-- font monitor js (helps debug font loading issues) -->
+	<script src="assets/js/font-monitor.js"></script>
 </body>
 
 </html>
