--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,9 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>מדיניות פרטיות - עורכת דין מעין דקל</title>
     <meta name="description" content="מדיניות הפרטיות של משרד עורכי דין מעין דקל">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
     <!-- carousel CSS -->
@@ -16,15 +15,17 @@
     <!-- animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all" />
     <!-- animated-text CSS -->
-    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
-    <!-- font-awesome CSS -->
+    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" /> <!-- font-awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+    <!-- font-awesome fix CSS -->
+    <link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
     <!-- font-flaticon CSS -->
     <link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
     <!-- theme-default CSS -->
     <link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
     <!-- meanmenu CSS -->
-    <link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" /> <!-- Fonts CSS -->
+    <link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
     <!-- transitions CSS -->
@@ -39,6 +40,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <!-- Added RTL-specific stylesheet -->
     <link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
     <!-- Custom font -->
     <style>
         @font-face {
@@ -134,7 +137,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">בלוג</a></li>
+                    <li><a href="blog.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
@@ -296,7 +299,7 @@
                         <div class="company-desc-info">
                             <p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
                             <p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-                            <p> <i class="bi bi-geo-alt-fill"></i> מה הכתובת של המשרד? </p>
+                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
