--- a/real-estate.html
+++ b/real-estate.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>עורכת דין מעין דקל - נדל"ן</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+    <title>עורכת דין מעין דקל - מומחית בנדל"ן, תמ"א 38 והתחדשות עירונית</title>
+    <meta name="description"
+        content="משרד עורכת הדין מעין דקל מתמחה בייצוג דיירים בפרויקטים של התחדשות עירונית, ליווי עסקאות מכר ושכירות, וטיפול בחוזי תמ"
+        א 38 באזור גוש דן. צרו קשר לייעוץ משפטי מקצועי.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+    <meta name="keywords"
+        content="עורכת דין נדל״ן, מעין דקל, תמ״א 38, התחדשות עירונית, הסכמי מכר, הסכמי שכירות, דיירים, חוזה נדל״ן, רכישת דירה, יעוץ משפטי נדל״ן">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.mayandekel-law.co.il/real-estate.html" /> <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
     <!-- bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
     <!-- carousel CSS -->
@@ -16,9 +21,10 @@
     <!-- animate CSS -->
     <link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all" />
     <!-- animated-text CSS -->
-    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
-    <!-- font-awesome CSS -->
+    <link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" /> <!-- font-awesome CSS -->
     <link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+    <!-- font-awesome fix CSS -->
+    <link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
     <!-- font-flaticon CSS -->
     <link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
     <!-- theme-default CSS -->
@@ -37,8 +43,37 @@
     <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <!-- Added RTL-specific stylesheet -->
+    <!-- font css (added) -->
+    <link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
+    <!-- RTL and custom stylesheets -->
     <link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
+    <!-- Schema.org markup for Google -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LegalService",
+        "name": "משרד עורכת דין מעין דקל - שירותי נדל\"ן",
+        "image": "assets/images/LawyerMaayanLogo.svg",
+        "url": "https://www.mayandekel-law.co.il/real-estate.html",
+        "telephone": "050-7526885",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "השחם 1",
+            "addressLocality": "פתח תקווה",
+            "postalCode": "4951729",
+            "addressCountry": "IL"
+        },
+        "description": "משרד עורכת דין מעין דקל מתמחה בנדל\"ן, התחדשות עירונית, תמ\"א 38, הסכמי מכר וקנייה, והסכמי שכירות לטווח ארוך וקצר.",
+        "areaServed": ["גוש דן", "פתח תקווה", "תל אביב"],
+        "serviceType": ["נדל\"ן", "תמ\"א 38", "התחדשות עירונית", "הסכמי מכר", "הסכמי שכירות"],
+        "priceRange": "₪₪-₪₪₪",
+        "sameAs": [
+            "https://www.facebook.com/mayandekellaw",
+            "https://www.linkedin.com/in/mayandekel"
+        ]
+    }
+    </script>
 </head>
 
 <body>
@@ -105,7 +140,7 @@
                             <li><a href="tort_law.html">נזיקין</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">בלוג</a></li>
+                    <li><a href="blog.html">בלוג</a></li>
                     <li><a href="contact.html">צור קשר</a></li>
                 </ul>
 
@@ -149,7 +184,7 @@
     <!--==================================================-->
     <!-- Start lawyer about Section -->
     <!--==================================================-->
-    <div class="about-section style-four" style="direction: ltr;">
+    <div class="about-section style-four">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-12">
@@ -177,10 +212,9 @@
                             וכו..
 
                         </p>
-                        <p>
-                            הסכמי מכר – רכישה וקניה, חשיבות אדירה לדגש על סעיפי החוזה, מהו המתן הכספי וכיצד התשלומים
+                        <p> הסכמי מכר – רכישה וקניה, חשיבות אדירה לדגש על סעיפי החוזה, מהו המתן הכספי וכיצד התשלומים
                             מועברים בצורה נכונה וטובה ביותר
-                            ללקוח. תוך בדירה מעמיקה על מצב הנכס כדי שלא יתגלו בעיות נסתרות כגון עיקולים , או נזקים
+                            ללקוח. תוך בדיקה מעמיקה על מצב הנכס כדי שלא יתגלו בעיות נסתרות כגון עיקולים, או נזקים
                             נסתרים. בשלבים אלו יש לתת דגש על
                             משרד שמבין בחוק ובפסיקה העדכנית כך שהלקוחות יקבלו מענה מלא והגנה שלמה.
                         </p>
@@ -188,10 +222,15 @@
                             הסכמי שכירות לטווח ארוך או קצר- תוך רישום הערות בהתאם בטאבו, למסחרי או לפרטי. יש לבדוק
                             אופציות להארכת מועד, מה קורה במצב
                             של החזר תשלומים. משרדנו פועל בטיפול מלא של פינוי המושכר . תוך פעילות כנגד הערבים במחלקת
-                            ההוצאה לפועל במשרדנו.
+                            ההוצאה לפועל במשרדנו. </p>
 
-
-                        </p>
+                        <!-- call to action button -->
+                        <div class="lawyer-button mt-5">
+                            <a href="contact.html">
+                                <span>צרו קשר לייעוץ נדל"ן</span>
+                                <i class="bi bi-arrow-left"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -199,6 +238,75 @@
     </div>
     <!--==================================================-->
     <!-- End lawyer about Secton -->
+
+    <!--==================================================-->
+    <!-- Start Service Features Section -->
+    <!--==================================================-->
+    <div class="service-section style-two pt-70 pb-70">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="lawyer-section-title pb-40 text-center">
+                        <h1>שירותי נדל"ן שאנו מציעים</h1>
+                        <p>הניסיון הרב והבקיאות בפסיקה העדכנית מבטיחים הגנה מקסימלית על זכויותיכם ואינטרסים בעסקאות
+                            נדל"ן מכל סוג</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="lawyer-service-single-box">
+                        <div class="service-icon">
+                            <img src="assets/images/resource/icon2.png" alt="תמ״א 38">
+                        </div>
+                        <div class="lawyer-service-content">
+                            <div class="service-title">
+                                <h3>תמ"א 38 והתחדשות עירונית</h3>
+                            </div>
+                            <div class="service-desc">
+                                <p>ייצוג דיירים בפרויקטים של תמ"א 38, בדיקת חוזים, ליווי מול היזמים והרשויות, והבטחת
+                                    זכויות בעלי הדירות לאורך כל התהליך.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="lawyer-service-single-box">
+                        <div class="service-icon">
+                            <img src="assets/images/resource/icon3.png" alt="הסכמי מכר">
+                        </div>
+                        <div class="lawyer-service-content">
+                            <div class="service-title">
+                                <h3>הסכמי מכר ורכישה</h3>
+                            </div>
+                            <div class="service-desc">
+                                <p>ליווי ברכישת או מכירת נכס, בדיקת מצב משפטי, איתור עיקולים או בעיות נסתרות, וניסוח
+                                    חוזים המגנים על האינטרסים שלך.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="lawyer-service-single-box">
+                        <div class="service-icon">
+                            <img src="assets/images/resource/icon4.png" alt="הסכמי שכירות">
+                        </div>
+                        <div class="lawyer-service-content">
+                            <div class="service-title">
+                                <h3>הסכמי שכירות</h3>
+                            </div>
+                            <div class="service-desc">
+                                <p>ניסוח וטיפול בהסכמי שכירות לטווח ארוך או קצר, רישום הערות בטאבו, טיפול בסכסוכים בין
+                                    משכירים לשוכרים ופינוי דיירים.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--==================================================-->
+    <!-- End Service Features Section -->
     <!--==================================================-->
 
 
@@ -222,7 +330,7 @@
                         <div class="company-desc-info">
                             <p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
                             <p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-                            <p> <i class="bi bi-geo-alt-fill"></i> מה הכתובת של המשרד? </p>
+                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
