--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.mayandekel-law.co.il/blog.html" />
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
 	<!-- carousel CSS -->
@@ -24,6 +24,8 @@
 	<link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
 	<!-- font-awesome CSS -->
 	<link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+	<!-- font-awesome fix CSS -->
+	<link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
 	<!-- font-flaticon CSS -->
 	<link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
 	<!-- theme-default CSS -->
@@ -44,14 +46,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 	<!-- Added RTL-specific stylesheet -->
 	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
-	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;700&display=swap" rel="stylesheet">
+	<!-- Fonts CSS -->
+	<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
-	<style>
-		body {
-			font-family: 'Assistant', sans-serif;
-		}
-	</style>
 	<!-- Schema.org markup for Blog -->
 	<script type="application/ld+json">
 	{
@@ -146,7 +144,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="#">בלוג</a></li>
+					<li><a href="blog.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
@@ -278,7 +276,7 @@
 						<div class="company-desc-info">
 							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
 							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1 פתח תקווה</p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
