--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
+<html lang="he" dir="rtl">
 
 <head>
 	<meta charset="UTF-8">
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="56x56" href="assets/images/fav-icon/icon.png">
+	<link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
 	<!-- bootstrap CSS -->
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
 	<!-- carousel CSS -->
@@ -19,12 +19,16 @@
 	<link rel="stylesheet" href="assets/css/animated-text.css" type="text/css" media="all" />
 	<!-- font-awesome CSS -->
 	<link rel="stylesheet" href="assets/css/all.min.css" type="text/css" media="all" />
+	<!-- font-awesome fix CSS -->
+	<link rel="stylesheet" href="assets/css/font-awesome-fix.css" type="text/css" media="all" />
 	<!-- font-flaticon CSS -->
 	<link rel="stylesheet" href="assets/css/flaticon.css" type="text/css" media="all" />
 	<!-- theme-default CSS -->
 	<link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
 	<!-- meanmenu CSS -->
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
+	<!-- Fonts CSS -->
+	<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
 	<!-- Main Style CSS -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 	<!-- transitions CSS -->
@@ -37,6 +41,12 @@
 	<script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
 	<!-- bootstrap icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+	<!-- Added RTL-specific stylesheet -->
+	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
+	<!-- EmailJS -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body>
@@ -104,7 +114,7 @@
 							<li><a href="tort_law.html">נזיקין</a></li>
 						</ul>
 					</li>
-					<li><a href="#">בלוג</a></li>
+					<li><a href="blog.html">בלוג</a></li>
 					<li><a href="contact.html">צור קשר</a></li>
 				</ul>
 
@@ -126,13 +136,13 @@
 					<div class="breatcam-content text-center">
 						<!-- breadcumb title -->
 						<div class="breatcam-title">
-							<h1> Contact Us </h1>
+							<h1> צור קשר </h1>
 						</div>
 						<!-- breatcam menu -->
 						<div class="breatcam-menu">
 							<ul>
-								<li><a href="index.html"> Home </a></li>
-								<li> Contact Us </li>
+								<li><a href="index.html">עמוד הבית</a></li>
+								<li>צור קשר</li>
 							</ul>
 						</div>
 					</div>
@@ -157,47 +167,49 @@
 			<div class="row">
 				<div class="col-lg-12 pb-60">
 					<div class="lawyer-section-title text-center">
-						<h1> Free Consultation </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
+						<h1>השאירו פרטים ונחזור אליכם בהקדם</h1>
+						<p>אנו מזמינים אתכם ליצור עמנו קשר לקבלת ייעוץ משפטי מקצועי ואישי. המשרד מתמחה במגוון תחומי
+							המשפט ומעניק שירות לקוחות מהמעלה הראשונה.</p>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-6 col-md-6 pr-4">
+			<div class="row align-items-center">
+				<div class="col-lg-6 col-md-12 pr-lg-4">
 					<!-- contact form box -->
 					<div class="contact-form-box">
-						<form action="https://formspree.io/f/myyleorq" method="POST" id="DRTheme-form">
+						<form id="contact-form" onsubmit="sendEmail(event)">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Your Name">
+										<input type="text" name="from_name" id="from_name" placeholder="שם מלא"
+											required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="E-Mail Address">
+										<input type="email" name="user_email" id="user_email" placeholder="כתובת אימייל"
+											required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Subject">
+										<input type="text" name="subject" id="subject" placeholder="נושא" required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Phone">
+										<input type="tel" name="phone" id="phone" placeholder="טלפון" required>
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="form-box">
-										<textarea name="massage" id="massage" cols="30" rows="10"
-											placeholder="Write Comment"></textarea>
+										<textarea name="message" id="message" cols="30" rows="10"
+											placeholder="תוכן ההודעה" required></textarea>
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="contact-form">
-										<button type="submit"> Submit Now </button>
+										<button type="submit" id="submit-btn">שלח עכשיו</button>
 									</div>
 								</div>
 							</div>
@@ -205,10 +217,14 @@
 						<div id="status"></div>
 					</div>
 				</div>
-				<div class="col-lg-6 col-md-6 pl-4">
-					<iframe
-						src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3596.6194043224186!2d89.61168491495718!3d25.650754283687256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fd33c03fbe69cb%3A0x273671e159f8b39e!2sRDRS%20Ulipur!5e0!3m2!1sen!2sbd!4v1636872467628!5m2!1sen!2sbd"
-						width="542" height="438" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				<div class="col-lg-6 col-md-12 pl-lg-4 mt-4 mt-lg-0">
+					<div class="map-container"
+						style="width: 100%; height: 500px; border-radius: 8px; overflow: hidden; box-shadow: 0 0 15px rgba(0,0,0,0.1);">
+						<iframe
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3380.9095135515416!2d34.86166977536265!3d32.09917517378786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x151d37a618a0cb67%3A0xe2781ccb4512bbdb!2z15TXqdeX150gMSwg16TXqteZINeq16fXldeV15Q!5e0!3m2!1siw!2sil!4v1714605595783!5m2!1siw!2sil"
+							width="100%" height="100%" style="border:0; display: block;" allowfullscreen=""
+							loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -230,9 +246,9 @@
 			<div class="row">
 				<div class="col-lg-12 pb-55">
 					<div class="lawyer-section-title text-center">
-						<h1> Contact Us Information </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
+						<h1>פרטי התקשרות</h1>
+						<p>ניתן ליצור איתנו קשר באמצעות הטלפון, אימייל או בהגעה למשרד. אנו עומדים לרשותכם בכל שאלה או
+							התייעצות משפטית.</p>
 					</div>
 				</div>
 			</div>
@@ -243,8 +259,8 @@
 							<i class="bi bi-telephone"></i>
 						</div>
 						<div class="contacts-title">
-							<h5>Call Us Now</h5>
-							<h6>+98 678 (960) 280</h6>
+							<h5>טלפון</h5>
+							<h6>050-7526885</h6>
 						</div>
 					</div>
 				</div>
@@ -254,8 +270,8 @@
 							<i class="bi bi-envelope-fill"></i>
 						</div>
 						<div class="contacts-title">
-							<h5>E-Mail-Us</h5>
-							<h6>example123@gmail.com</h6>
+							<h5>אימייל</h5>
+							<h6>info@lawyermaanyan.co.il</h6>
 						</div>
 					</div>
 				</div>
@@ -265,8 +281,8 @@
 							<i class="bi bi-geo-alt-fill"></i>
 						</div>
 						<div class="contacts-title">
-							<h5>Our Locations</h5>
-							<h6>1/A New Road,Colifornia,USA</h6>
+							<h5>כתובת המשרד</h5>
+							<h6>השחם 1, פתח תקווה</h6>
 						</div>
 					</div>
 				</div>
@@ -298,9 +314,9 @@
 						</div>
 						<!-- company desc info -->
 						<div class="company-desc-info">
-							<p> <i class="bi bi-telephone"></i> Phone: 800.123.4567 </p>
-							<p> <i class="bi bi-envelope-fill"></i> Email: www.@example.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> A26BT5 Building, SilverC Street, </p>
+							<p> <i class="bi bi-telephone"></i> טלפון: 050-7526885 </p>
+							<p> <i class="bi bi-envelope-fill"></i> אימייל: info@lawyermaanyan.co.il </p>
+							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
@@ -316,13 +332,13 @@
 				<div class="col-lg-3 col-md-6 pl-30">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Services </h4>
+						<h4 class="widget-title">שירותים</h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#"> Labor and Employment </a></li>
-								<li><a href="#"> Intellectual Property </a></li>
-								<li><a href="#"> Legal IT services </a></li>
-								<li><a class="border1" href="#"> Banking and Finance </a></li>
+								<li><a href="#">נדל"ן</a></li>
+								<li><a href="#">חוזים</a></li>
+								<li><a href="#">לשון הרע</a></li>
+								<li><a class="border1" href="#">נזיקין</a></li>
 							</ul>
 						</div>
 					</div>
@@ -330,13 +346,13 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Useful Links </h4>
+						<h4 class="widget-title">קישורים</h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#"> Terms and Conditions </a></li>
-								<li><a href="#"> Privacy Policy </a></li>
-								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li>
+								<li><a href="#">תנאי שימוש</a></li>
+								<li><a href="#">מדיניות פרטיות</a></li>
+								<li><a href="#">מדיניות תלונות</a></li>
+								<li><a class="border1" href="#">שאלות נפוצות</a></li>
 							</ul>
 						</div>
 					</div>
@@ -344,7 +360,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Free Consultation </h4>
+						<h4 class="widget-title">צור קשר</h4>
 						<div class="menu-quick-link-contact">
 							<!-- contact icon -->
 							<div class="footer-contact-icon">
@@ -352,13 +368,13 @@
 							</div>
 							<!-- contact title -->
 							<div class="footer-contact-title">
-								<h6>1-800-643-430 244</h6>
+								<h6>050-7526885</h6>
 							</div>
 						</div>
 						<!-- footer desc -->
 						<div class="footer-contact-desc">
-							<p>Goldenblatt Firm SRA ref 669401 dalls may be recorded for quality and moldenblatt Firm
-								SRA ref desh training purposes.</p>
+							<p>משרד עורכי דין מעיין דקל מספק שירותי ייעוץ משפטי מקצועי. אנא פנו אלינו לקבלת מידע נוסף או
+								לקביעת פגישת ייעוץ.</p>
 						</div>
 					</div>
 				</div>
@@ -366,14 +382,14 @@
 			<div class="row footer-bottom-bg">
 				<div class="col-lg-6 col-md-6 pl-0">
 					<div class="footer-bottom-content-copy">
-						<p> Copyright 2023 By DRTheme. All Rights Reserved. </p>
+						<p>כל הזכויות שמורות © 2023 למשרד עורכי דין מעיין דקל</p>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 pr-0">
 					<div class="footer-bottom-menu text-right">
 						<ul>
-							<li><a href="#">Privacy Policy</a></li>
-							<li><a href="#">Legal Agreement</a></li>
+							<li><a href="#">מדיניות פרטיות</a></li>
+							<li><a href="#">הסכם משפטי</a></li>
 						</ul>
 					</div>
 				</div>
@@ -438,6 +454,50 @@
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<!-- theme js -->
 	<script src="assets/js/theme.js"></script>
+
+	<!-- EmailJS Integration -->
+	<script type="text/javascript">
+		(function () {
+			// Replace with your actual EmailJS public key
+			emailjs.init("as3xPGRPWCNb9Dk_Q");
+		})();
+
+		function sendEmail(e) {
+			e.preventDefault();
+
+			// Show loading indicator
+			document.getElementById("submit-btn").disabled = true;
+			document.getElementById("submit-btn").textContent = "שולח...";
+
+			// Create template parameters object to ensure all fields are sent properly
+			const templateParams = {
+				name: document.getElementById('from_name').value,
+				email: document.getElementById('user_email').value,
+				title: document.getElementById('subject').value,
+				phone: document.getElementById('phone').value,
+				message: document.getElementById('message').value
+			};
+
+			// Log the parameters for debugging
+			console.log("Sending email with parameters:", templateParams);
+
+			// Use emailjs.send() instead of sendForm since we're passing parameters directly
+			emailjs.send('service_ck6hb9l', 'template_0dyulej', templateParams)
+				.then(function () {
+					// Success message
+					alert("ההודעה נשלחה בהצלחה! נחזור אליך בהקדם.");
+					document.getElementById("contact-form").reset();
+					document.getElementById("submit-btn").disabled = false;
+					document.getElementById("submit-btn").textContent = "שלח עכשיו";
+				}, function (error) {
+					// Error message
+					console.error("EmailJS error:", error);
+					alert("אירעה שגיאה בשליחת ההודעה: " + error);
+					document.getElementById("submit-btn").disabled = false;
+					document.getElementById("submit-btn").textContent = "שלח עכשיו";
+				});
+		}
+	</script>
 </body>
 
 </html>
