adding logic for sending an email from home page, and add phone value for the mail content. adding enforcement page

--- a/about.html
+++ b/about.html
@@ -150,6 +150,7 @@
 									<li><a href="contracts.html">חוזים</a></li>
 									<li><a href="defamation-law.html">לשון הרע</a></li>
 									<li><a href="tort_law.html">נזיקין</a></li>
+									<li><a href="enforcement.html">הוצאה לפועל</a></li>
 								</ul>
 							</li>
 							<li><a href="blog.html">בלוג</a></li>
@@ -175,6 +176,7 @@
 							<li><a href="contracts.html">חוזים</a></li>
 							<li><a href="defamation-law.html">לשון הרע</a></li>
 							<li><a href="tort_law.html">נזיקין</a></li>
+							<li><a href="enforcement.html">הוצאה לפועל</a></li>
 						</ul>
 					</li>
 					<li><a href="blog.html">בלוג</a></li>
@@ -340,8 +342,8 @@
 						</div>
 						<!-- company desc info -->
 						<div class="company-desc-info">
-							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
-							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
+							<p> <i class="bi bi-telephone"></i>050-7526885 </p>
+							<p> <i class="bi bi-envelope-fill"></i>dekellaw2024@gmail.com </p>
 							<p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
 						</div>
 						<!-- company social info -->
@@ -349,7 +351,8 @@
 							<ul>
 								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 								<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
-								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+								<li><a target="_blank" href="https://www.linkedin.com/in/mayan-dekel-938297344/"><i
+											class="fab fa-linkedin-in"></i></a></li>
 								<!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
 							</ul>
 						</div>
@@ -365,6 +368,7 @@
 								<li><a href="contracts.html">חוזים</a></li>
 								<li><a href="defamation-law.html">לשון הרע</a></li>
 								<li><a href="tort_law.html">נזיקין</a></li>
+								<li><a href="enforcement.html">הוצאה לפועל</a></li>
 							</ul>
 						</div>
 					</div>
