--- a/defamation-law.html
+++ b/defamation-law.html
@@ -106,6 +106,7 @@
                             <li><a href="contracts.html">חוזים</a></li>
                             <li><a href="defamation-law.html">לשון הרע</a></li>
                             <li><a href="tort_law.html">נזיקין</a></li>
+                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
                         </ul>
                     </li>
                     <li><a href="blog.html">בלוג</a></li>
