--- a/enforcement.html
+++ b/enforcement.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>מדיניות פרטיות - עורכת דין מעין דקל</title>
-    <meta name="description" content="מדיניות הפרטיות של משרד עורכי דין מעין דקל">
+    <title>עורכת דין מעין דקל - הוצאה לפועל, נדלן וירושות</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="assets/images/LawyerMaayanLogo.svg">
     <!-- bootstrap CSS -->
@@ -42,35 +42,6 @@
     <link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
     <!-- Custom styles -->
     <link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
-    <!-- Custom font -->
-    <style>
-        @font-face {
-            font-family: 'Open Sans Condensed';
-            src: url('assets/fonts/OpenSans_Condensed-Light.ttf') format('truetype');
-            font-weight: 300;
-            font-style: normal;
-            font-display: swap;
-        }
-
-        :root {
-            --primary-font: 'Open Sans Condensed', sans-serif;
-            --heading-font: 'Open Sans Condensed', sans-serif;
-        }
-
-        body,
-        p,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
-        a,
-        span,
-        li {
-            font-family: var(--primary-font);
-        }
-    </style>
 </head>
 
 <body>
@@ -91,7 +62,7 @@
                 <div class="col-lg-2">
                     <div class="logo">
                         <a class="logo_img" href="index.html" title="lawyer">
-                            <img src="assets/images/LawyerMaayanLogo.svg" alt="" />
+                            <img class="header-logo" src="assets/images/LawyerMaayanLogo.svg" alt="" />
                         </a>
                         <a class="logo_img main_sticky" href="index.html" title="lawyer">
                             <img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
@@ -110,6 +81,7 @@
                                     <li><a href="contracts.html">חוזים</a></li>
                                     <li><a href="defamation-law.html">לשון הרע</a></li>
                                     <li><a href="tort_law.html">נזיקין</a></li>
+                                    <li><a href="enforcement.html">הוצאה לפועל</a></li>
                                 </ul>
                             </li>
                             <li><a href="blog.html">בלוג</a></li>
@@ -119,7 +91,9 @@
                 </div>
             </div>
         </div>
-    </div> <!-- lawyer Mobile Menu Area -->
+    </div>
+
+    <!-- lawyer Mobile Menu Area -->
     <div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
         <div class="mobile-menu">
             <nav class="lawyer_menu">
@@ -158,8 +132,13 @@
                     <div class="breatcam-content text-center">
                         <!-- breadcumb title -->
                         <div class="breatcam-title">
-                            <h1>מדיניות פרטיות</h1>
+                            <h1> הוצאה לפועל </h1>
                         </div>
+                        <!-- breatcam menu -->
+                        <!-- <div class="breatcam-menu">
+							<ul>
+							</ul>
+						</div> -->
                     </div>
                 </div>
             </div>
@@ -171,103 +150,34 @@
 
 
     <!--==================================================-->
-    <!-- Start Privacy Policy Section -->
+    <!-- Start lawyer about Section -->
     <!--==================================================-->
-    <div class="about-section style-four">
+    <div class="about-section style-four" style="direction: ltr;">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-12 col-md-12">
+                <div class="col-lg-6 col-md-12">
+                    <!-- about thumb -->
+                    <div class="about-thumb3 ">
+                        <img src="assets/images/LawyerMaayanWhite.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
                     <div class="lawyer-section-title business-profile">
-                        <h2>מדיניות הפרטיות של משרד עורכי דין מעין דקל</h2>
-                        <p>עדכון אחרון: 26 באפריל, 2025</p>
-
-                        <h3 class="mt-4">1. מבוא</h3>
-                        <p>
-                            ברוכים הבאים לאתר האינטרנט של משרד עורכי דין מעין דקל ("המשרד", "אנחנו", "שלנו"). אנו
-                            מחויבים לשמירה על פרטיותך ועל אבטחת המידע האישי שלך. מדיניות פרטיות זו מסבירה את האופן שבו
-                            אנו אוספים, משתמשים, מגלים, מעבירים ומאחסנים את המידע האישי שלך.
+                        <h1 class="about-border2">הוצאה לפועל</h1>
+                        <p class="about-pt">
+                            לשכת הוצאה לפועל נועדה לתת מענה לנושים שלא קיבלו את כספם ולאכוף את זכויותיהם מכל מי שמסרב
+                            לשלם. בלשכה ניתן לפנות כל אזרח, חברה בע"מ, עמותה, וגוף עסקי. פתיחת התיק יכולה להיות בשל פסק
+                            דין שלא שולם, שיק שחולל, התחייבות חוזית, התחייבות כספית, וכדומה...
                         </p>
                         <p>
-                            כאשר אתה מבקר באתר שלנו או משתמש בשירותים שלנו, אתה מסכים לתנאים המפורטים במדיניות פרטיות
-                            זו. אנא קרא בעיון את המדיניות שלנו כדי להבין את הפרקטיקות שלנו בנוגע למידע האישי שלך.
-                        </p>
-
-                        <h3 class="mt-4">2. סוגי המידע שאנו אוספים</h3>
-                        <p>
-                            אנו עשויים לאסוף את סוגי המידע הבאים:
-                        </p>
-                        <ul>
-                            <li><strong>מידע אישי:</strong> שם, כתובת דואר אלקטרוני, מספר טלפון, כתובת, ומידע דמוגרפי
-                                אחר שאתה מספק לנו כאשר אתה יוצר קשר עמנו או נרשם לשירותים שלנו.</li>
-                            <li><strong>מידע טכני:</strong> כתובת IP, סוג דפדפן, ספק שירותי אינטרנט, זמני כניסה/יציאה,
-                                עמודים שנצפו ונתיבי גלישה באתר.</li>
-                            <li><strong>תקשורת:</strong> כל תקשורת והתכתבות שאתה מקיים עמנו, כולל דואר אלקטרוני, פניות
-                                ומסרים אחרים.</li>
-                        </ul>
-
-                        <h3 class="mt-4">3. כיצד אנו משתמשים במידע שלך</h3>
-                        <p>
-                            אנו משתמשים במידע שאנו אוספים למטרות הבאות:
-                        </p>
-                        <ul>
-                            <li>לספק, לתחזק ולשפר את השירותים המשפטיים שלנו</li>
-                            <li>לענות על פניות, שאלות ובקשות לסיוע משפטי</li>
-                            <li>לתקשר איתך בנוגע לשירותים שלנו</li>
-                            <li>לספק לך מידע על אירועים, חדשות משפטיות ועדכונים חשובים</li>
-                            <li>לנתח ולשפר את האתר והשירותים שלנו</li>
-                            <li>לציית לחובות המשפטיות שלנו ולאכוף את התנאים שלנו</li>
-                        </ul>
-
-                        <h3 class="mt-4">4. שיתוף וגילוי מידע</h3>
-                        <p>
-                            אנו לא מוכרים או משכירים את המידע האישי שלך לצדדים שלישיים למטרות שיווק. אנו עשויים לשתף
-                            מידע אישי בנסיבות הבאות:
-                        </p>
-                        <ul>
-                            <li><strong>שותפים עסקיים:</strong> ספקי שירותים שעובדים בשמנו כדי לספק שירותים הקשורים
-                                למשרדנו.</li>
-                            <li><strong>דרישות חוקיות:</strong> כאשר אנו מאמינים בתום לב שגילוי נדרש כדי לציית לחוק, לצו
-                                בית משפט או להליך משפטי.</li>
-                            <li><strong>הגנה על זכויות:</strong> להגן על הזכויות, הרכוש או הבטיחות של המשרד שלנו,
-                                לקוחותינו או אחרים.</li>
-                        </ul>
-
-                        <h3 class="mt-4">5. אבטחת מידע</h3>
-                        <p>
-                            אנו מיישמים אמצעי אבטחה סבירים כדי להגן על המידע האישי שלך מפני גישה, שימוש או גילוי בלתי
-                            מורשים. עם זאת, אף שיטת העברה באינטרנט או אחסון אלקטרוני אינה בטוחה לחלוטין, ואיננו יכולים
-                            להבטיח את האבטחה המוחלטת של המידע שלך.
-                        </p>
-
-                        <h3 class="mt-4">6. זכויותיך</h3>
-                        <p>
-                            בהתאם לחוקי הגנת הפרטיות החלים, ייתכן שיש לך זכויות מסוימות בנוגע למידע האישי שלך, כולל:
-                        </p>
-                        <ul>
-                            <li>הזכות לגשת למידע האישי שלך</li>
-                            <li>הזכות לתקן מידע לא מדויק</li>
-                            <li>הזכות למחוק את המידע שלך בנסיבות מסוימות</li>
-                            <li>הזכות להתנגד לעיבוד המידע שלך</li>
-                        </ul>
-                        <p>
-                            כדי לממש את זכויותיך, אנא צור עמנו קשר באמצעות הפרטים המופיעים בסעיף "צור קשר" להלן.
-                        </p>
-
-                        <h3 class="mt-4">7. שינויים במדיניות הפרטיות</h3>
-                        <p>
-                            אנו רשאים לעדכן מדיניות פרטיות זו מעת לעת. אנו נודיע לך על שינויים מהותיים על ידי פרסום
-                            הגרסה המעודכנת באתר שלנו. אנו ממליצים לך לבדוק מדיניות זו באופן תקופתי.
-                        </p>
-
-                        <h3 class="mt-4">8. צור קשר</h3>
-                        <p>
-                            אם יש לך שאלות או חששות לגבי מדיניות הפרטיות שלנו או כיצד אנו מטפלים במידע האישי שלך, אנא
-                            צור קשר עם:
+                            משרדנו מלווה את הלקוחות בכל הגשות הבקשות מול לשכות הוצאה לפעול בכל רחבי הארץ, ובכל הנוגע
+                            למידע לחוב, וכן נקיטת הליכים כנגד החייב החל ממכתבי התראה, פתיחת תיק הוצל"פ ולרבות הטלת
+                            עיקולים וביצוע מימושי כספים.
                         </p>
                         <p>
-                            משרד עורכי דין מעין דקל ושות'<br>
-                            טלפון: 050-7526885<br>
-                            דואר אלקטרוני: dekellaw2024@gmail.com
+                            משרדנו נותן אמצעי מלא כיצד לפעול בלשכות הוצל"פ כנגד החייב, ואך מתמודדים עם החייב, תוך מתן
+                            חשיבות לתוצאות ההליך עבור הנושה ועבור הזוכה. ועל כן יש חשיבות אדירה לניסיון הרב שכן משרדנו
+                            נותן דגש לייעוץ המשפטי בכל הליך והליך בהוצאה לפועל, שיניב פירות לזוכה.
                         </p>
                     </div>
                 </div>
@@ -275,8 +185,9 @@
         </div>
     </div>
     <!--==================================================-->
-    <!-- End Privacy Policy Section -->
+    <!-- End lawyer about Secton -->
     <!--==================================================-->
+
 
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
@@ -298,15 +209,13 @@
                         <div class="company-desc-info">
                             <p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
                             <p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
-                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה </p>
+                            <p> <i class="bi bi-geo-alt-fill"></i> השחם 1, פתח תקווה</p>
                         </div>
                         <!-- company social info -->
                         <div class="company-social-info">
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                                <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -321,6 +230,7 @@
                                 <li><a href="contracts.html">חוזים</a></li>
                                 <li><a href="defamation-law.html">לשון הרע</a></li>
                                 <li><a href="tort_law.html">נזיקין</a></li>
+                                <li><a href="enforcement.html">הוצאה לפועל</a></li>
                             </ul>
                         </div>
                     </div>
@@ -332,9 +242,6 @@
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
                                 <li><a href="#"> בקרוב... </a></li>
-                                <!-- <li><a href="#"> Privacy Policy </a></li>
-								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -365,7 +272,7 @@
                 </div>
             </div>
             <div class="row footer-bottom-bg">
-                <div class="col-lg-6 col-md-6 pl-0">
+                <div class="col-lg-6 col-md-6 pl-0 footer-all-rights">
                     <div class="footer-bottom-content-copy">
                         <p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
                     </div>
@@ -386,6 +293,9 @@
     <!--==================================================-->
 
 
+
+
+
     <!--==================================================-->
     <!-- Start scrollup section Area -->
     <!--==================================================-->
@@ -403,6 +313,9 @@
     <!--==================================================-->
     <!-- Start scrollup section Area -->
     <!--==================================================-->
+
+
+
 
     <!-- jquery js -->
     <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
