--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 	<link rel="stylesheet" href="assets/css/rtl.css" type="text/css" media="all" />
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="assets/css/custom.css" type="text/css" media="all" />
+	<!-- EmailJS -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+	<script type="text/javascript" src="assets/js/emailjs-helper.js"></script>
 	<!-- Schema.org markup for Google -->
 	<script type="application/ld+json">
 	{
@@ -131,6 +134,7 @@
 									<li><a href="contracts.html">חוזים</a></li>
 									<li><a href="defamation-law.html">לשון הרע</a></li>
 									<li><a href="tort_law.html">נזיקין</a></li>
+									<li><a href="enforcement.html">הוצאה לפועל</a></li>
 								</ul>
 							</li>
 							<li><a href="blog.html">בלוג</a></li>
@@ -156,6 +160,7 @@
 							<li><a href="contracts.html">חוזים</a></li>
 							<li><a href="defamation-law.html">לשון הרע</a></li>
 							<li><a href="tort_law.html">נזיקין</a></li>
+							<li><a href="enforcement.html">הוצאה לפועל</a></li>
 						</ul>
 					</li>
 					<li><a href="blog.html">בלוג</a></li>
@@ -402,7 +407,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
+								<a href="enforcement.html">קרא עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -516,41 +521,44 @@
 				<div class="col-lg-6 col-md-12">
 					<!-- contact form box -->
 					<div class="contact-form-box">
-						<form action="https://formspree.io/f/myyleorq" method="POST" id="DRTheme-form">
+						<form id="contact-form" onsubmit="sendEmailWithTemplateParams(event)">
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="שם מלא">
+										<input type="text" name="from_name" id="from_name" placeholder="שם מלא"
+											required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="אימייל">
+										<input type="email" name="user_email" id="user_email" placeholder="אימייל"
+											required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="נושא">
+										<input type="text" name="subject" id="subject" placeholder="נושא" required>
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="טלפון">
+										<input type="tel" name="phone" id="phone" placeholder="טלפון" required>
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="form-box">
-										<textarea name="massage" id="massage" cols="30" rows="10"
-											placeholder="השאר הודעה"></textarea>
+										<textarea name="message" id="message" cols="30" rows="10"
+											placeholder="השאר הודעה" required></textarea>
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="contact-form">
-										<button type="submit"> שלח </button>
+										<button type="submit" id="submit-btn"> שלח עכשיו </button>
 									</div>
 								</div>
 							</div>
 						</form>
+						<div id="status"></div>
 						<div id="status"></div>
 					</div>
 				</div>
@@ -918,6 +926,14 @@
 	<script src="assets/js/jquery.barfiller.js"></script>
 	<!-- theme js -->
 	<script src="assets/js/theme.js"></script>
+
+	<!-- EmailJS Integration -->
+	<script type="text/javascript">
+		(function () {
+			// Initialize EmailJS with your public key
+			emailjs.init("as3xPGRPWCNb9Dk_Q");
+		})();
+	</script>
 	<!-- font monitor js (helps debug font loading issues) -->
 	<script src="assets/js/font-monitor.js"></script>
 </body>
