--- a/tort_law.html
+++ b/tort_law.html
@@ -90,9 +90,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-    <!-- lawyer Mobile Menu Area -->
+    </div> <!-- lawyer Mobile Menu Area -->
     <div class="mobile-menu-area sticky d-sm-block d-md-block d-lg-none ">
         <div class="mobile-menu">
             <nav class="lawyer_menu">
@@ -106,6 +104,7 @@
                             <li><a href="contracts.html">חוזים</a></li>
                             <li><a href="defamation-law.html">לשון הרע</a></li>
                             <li><a href="tort_law.html">נזיקין</a></li>
+                            <li><a href="enforcement.html">הוצאה לפועל</a></li>
                         </ul>
                     </li>
                     <li><a href="blog.html">בלוג</a></li>
